testsuite/good/observers/test_publisher_extends/PublisherSuperType.flux
type PublisherSuperType publishes Event1, Event2 {
   
}