testsuite/bad/test_publisher_subtype/SuperType.flux
type SuperType publishes int, double {}